# site

./: .coveragerc  .dockerignore  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierrc  .prettierrc.toml  CONTRIBUTING.md  Dockerfile  LICENSE  docker-compose.yml  manage.py  package-lock.json  package.json  prettierrc.toml  pyproject.toml
.github/workflows/: build.yml  lint-test.yml
web/: middleware.py  settings.py  urls.py
web/api/: aws.py  urls.py
web/api/migrations/: 0001_initial.py  0002_unique_user_email.py  0003_parameter_type.py  0004_remove_test_priority.py  0005_parameter_test_1to1_1.py  0006_parameter_test_1to1_2.py  0007_parameter_test_1to1_3.py  0008_parameter_sensor_id.py  0009_test_add_django_q_schedule_1.py  0010_test_add_django_q_schedule_2.py  0011_test_add_django_q_schedule_3.py  0012_test_history_fix_constraints.py
web/api/models/: __init__.py  device.py  notification_settings.py  parameter.py  test.py  test_history.py  user.py
web/api/serializers/: __init__.py  device.py  notification_settings.py  parameter.py  test.py  test_history.py
web/api/viewsets/: __init__.py  device.py  notification_settings.py  parameter.py  test.py  test_history.py
web/frontend/: apps.py  urls.py
web/frontend/angular/: .dockerignore  .gitignore  angular.json  extra-webpack.config.js  karma.conf.js  package-lock.json  package.json
web/frontend/angular/src/: main.ts  styles.scss  test.ts
web/frontend/angular/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  auth.service.spec.ts  auth.service.ts
web/frontend/angular/src/app/about/: about.component.spec.ts  about.component.ts
web/frontend/angular/src/app/admin/: admin.component.html  admin.component.ts
web/frontend/angular/src/app/apis/: apis.service.spec.ts  apis.service.ts
web/frontend/angular/src/app/auth/: auth.component.ts  auth.guard.spec.ts  auth.interceptor.ts  auth.service.ts  user.ts
web/frontend/angular/src/app/dashboard-pages/notifications/: notifications.component.html  notifications.component.scss  notifications.component.spec.ts  notifications.component.ts
web/frontend/angular/src/app/footer/: footer.component.scss  footer.component.spec.ts  footer.component.ts
web/frontend/angular/src/app/header/: header.component.html  header.component.scss  header.component.spec.ts  header.component.ts
web/frontend/angular/src/app/page-not-found/: page-not-found.component.html  page-not-found.component.spec.ts  page-not-found.component.ts
web/frontend/angular/src/app/product/: product.component.html  product.component.spec.ts  product.component.ts
web/frontend/angular/src/app/sign-in/: sign-in.component.scss  sign-in.component.ts
web/frontend/angular/src/app/sign-up/: sign-up.component.html  sign-up.component.scss  sign-up.component.spec.ts  sign-up.component.ts
web/frontend/angular/src/environments/: environment.prod.ts  environment.ts
web/frontend/templates/: index.html
web/utils/: fields.py  json.py  triggers.py
(+85 files in other folders)
