[tool.poetry]
name = "site"
version = "0.1.0"
description = "Web app for aquaponics monitoring."
authors = ["Comp-490-SeniorProject"]
license = "MIT"

[tool.poetry.dependencies]
django = "~3.2.8"
django-environ = "~0.7.0"
django-webpack-loader = "~1.4"
gunicorn = "~20.1"
psycopg2-binary = "~2.9.1"
python = "~3.9"
secure = "~0.3.0"
whitenoise = "~5.3"

[tool.poetry.dev-dependencies]
black = "=21.9b0"
coverage = "~6.0"
pre-commit = "~2.15.0"
pytest = "~6.2"
pytest-django = "~4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true
src_paths = ["web"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings"
